# keyauto

./: .gitignore  README.en.md  README.md  justfile  keyauto_log.txt  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: node.js.yml  release.yml
src/: App.css  App.tsx  KeyAutoTask.tsx  main.tsx
src-tauri/: Cargo.toml  rm_hook_dll.ps1  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/find_clash_hotkey/: Cargo.toml
src-tauri/find_clash_hotkey/src/: main.rs
src-tauri/icons/: icon.icns
src-tauri/src/: execute.rs  fmt_display.rs  lib.rs  listen.rs  main.rs  record.rs  register.rs
src/components/: OperationPanel.tsx  Separator.tsx  StartExecuteRecord.tsx  Toast.tsx
src/store/: index.ts
src/utils/: EventsType.ts  GlobalListen.ts  logger.ts
