[package]
name = "keyauto"
version = "0.1.0"
description = "A Tauri App for automation of key and mouse tasks"
authors = ["superwindcloud"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/superwindcloud/keyauto"
homepage = "https://github.com/superwindcloud/keyauto"
edition = "2021"
default-run = "keyauto"


[workspace]
members = [
    ".",
    "find_clash_hotkey"
]

[[bin]]
name = "keyauto"
path = "src/main.rs"

[[bin]]
name = "keyauto_hot_key"
path = "src/bin/hotkey.rs"

[[bin]]
name = "keyauto_listener"
path = "src/bin/listen.rs"

[lib]
name = "keyauto_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rdev = "0.5.3"
once_cell = "1.21.3"
sysinfo = "0.35.2"
mouse_position = "0.1.4"
enigo = "0.5.0"
tauri-plugin-global-shortcut = "2.2.1"


[profile.dev]
incremental = true
opt-level = 0
debug = true
codegen-units = 256


[profile.release]
incremental = true
panic = "abort"
strip = true

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
